<resources>
    <string name="app_name">Calculator</string>
    <string name="Ver">Version 1.4</string>
    <string name="sqr_root">\u221a</string>
    <string name="square">x\u00B2</string>
    <string name="divide">\u00F7</string>
    <string name="multiply">\u00D7</string>
    <string name="plus_minus">\u00B1</string>
    <string name="minus"> \u0020 \u0336</string>
    <string name="percent">%</string>
    <string name="plus">+</string>
    <string name="point">.</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ravno">=</string>
    <string name="c">мс \n     C</string>
    <string name="m">M+</string>
    <string name="m_">M-</string>
    <string name="mr">MR</string>
    <string name="memBox">Memory is empty</string>
    <string name="exitApp">Click again to exit</string>
</resources>
